--- a/app/src/main/res/layout/activity_main_full.xml
+++ b/app/src/main/res/layout/activity_main_full.xml
@@ -13,14 +13,13 @@
         android:layout_margin="10dp"
         android:background="@android:color/transparent"
         android:src="@drawable/tab_settings_32dp"
-        android:contentDescription="Setting"/>
+        android:contentDescription="Settings"/>
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="615dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginHorizontal="5dp"
+        android:layout_height="660dp"
+        android:layout_margin="5dp"
         app:cardElevation="0dp"
         app:cardCornerRadius="40dp"
         app:cardPreventCornerOverlap="true" >
