--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/fragment_container"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:background="@color/design_default_color_primary_variant"/>
+            android:background="@color/purple_500"/>
 
     </androidx.cardview.widget.CardView>
 
