--- a/app/src/main/res/layout/navigation.xml
+++ b/app/src/main/res/layout/navigation.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:scaleType="center"
-        android:src="@drawable/tab_add_56dp"
+        android:src="@drawable/tab_bullseye_56dp"
         app:layout_anchor="@id/bottom_bar"
         app:maxImageSize="60dp"
         app:fabCustomSize="80dp"
