--- a/app/src/main/res/layout/progress_fragment.xml
+++ b/app/src/main/res/layout/progress_fragment.xml
@@ -4,18 +4,299 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/carrot100">
 
-    <TextView
-        android:id="@+id/testView"
-        android:layout_width="wrap_content"
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="296dp"
-        android:text="EDISTYMISEN SEURANTA"
-        android:textColor="@color/design_default_color_error"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/orange50"
+        android:elevation="5dp"
+        app:cardCornerRadius="60dp"
+        app:cardPreventCornerOverlap="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/Edistyminen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Edistyminen"
+            android:textAlignment="gravity"
+            android:textSize="24sp" />
+    </androidx.cardview.widget.CardView>
+
+
+    <com.team9.daymate.elements.CircularImageView
+        android:layout_width="312dp"
+        android:layout_height="184dp"
+        android:layout_marginBottom="32dp"
+        android:padding="10dp"
+        android:src="@drawable/tab_wrench_56dp"
+        app:circle_backgroundColor="@color/yellow200"
+        app:circle_backgroundTint="@color/purple_200"
+
+
+        app:circle_color="@color/green"
+        app:circle_progress="10"
+
+        app:circle_width="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/card_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="250dp"
+        android:elevation="3dp"
+        app:cardCornerRadius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top"
+            android:backgroundTint="@color/orange50"
+            android:elevation="5dp"
+            app:cardCornerRadius="60dp"
+            app:cardPreventCornerOverlap="true">
+
+            <TextView
+                android:id="@+id/card_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Viikkokatsaus"
+                android:textAlignment="gravity"
+                android:textSize="24sp" />
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <com.team9.daymate.elements.ProgressPillar
+                android:id="@+id/progressbar_wednesday"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="32dp"
+                app:backgroundColor="@color/cyan200"
+                app:color="@color/green400"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressbar_tuesday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:pillarWidth="100"
+                app:progress="0" />
+
+            <com.team9.daymate.elements.ProgressPillar
+                android:id="@+id/progressbar_monday"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="23dp"
+                app:backgroundColor="@color/cyan200"
+                app:color="@color/green400"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:pillarWidth="100"
+                app:progress="0" />
+
+            <com.team9.daymate.elements.ProgressPillar
+                android:id="@+id/progressbar_tuesday"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="32dp"
+                app:backgroundColor="@color/cyan200"
+                app:color="@color/green400"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressbar_monday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:pillarWidth="100"
+                app:progress="0" />
+
+
+            <com.team9.daymate.elements.ProgressPillar
+                android:id="@+id/progressbar_thursday"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="32dp"
+                app:backgroundColor="@color/cyan200"
+                app:color="@color/green400"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressbar_wednesday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:pillarWidth="100"
+                app:progress="0" />
+
+            <com.team9.daymate.elements.ProgressPillar
+                android:id="@+id/progressbar_friday"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="32dp"
+                app:backgroundColor="@color/cyan200"
+                app:color="@color/green400"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressbar_thursday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:pillarWidth="100"
+                app:progress="0" />
+
+            <com.team9.daymate.elements.ProgressPillar
+                android:id="@+id/progressbar_saturday"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="32dp"
+                app:backgroundColor="@color/cyan200"
+                app:color="@color/green400"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressbar_friday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:pillarWidth="100"
+                app:progress="0" />
+
+            <com.team9.daymate.elements.ProgressPillar
+                android:id="@+id/progressbar_sunday"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="32dp"
+                app:backgroundColor="@color/cyan200"
+                app:color="@color/green400"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressbar_saturday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:pillarWidth="100"
+                app:progress="20" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="21dp"
+                android:padding="2dp"
+                android:text="Ma"
+                android:textAlignment="center"
+                android:textColor="@color/cyan500"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar_monday" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="27dp"
+                android:padding="2dp"
+                android:paddingStart="4dp"
+                android:paddingEnd="7dp"
+                android:text="Ti"
+                android:textAlignment="center"
+                android:textColor="@color/cyan500"
+                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar_tuesday" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="27dp"
+                android:padding="2dp"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                android:text="Ke"
+                android:textAlignment="center"
+                android:textColor="@color/cyan500"
+                app:layout_constraintStart_toEndOf="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar_wednesday" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="27dp"
+                android:padding="2dp"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                android:text="To"
+                android:textAlignment="center"
+                android:textColor="@color/cyan500"
+                app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar_thursday" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="27dp"
+                android:padding="2dp"
+                android:paddingStart="4dp"
+                android:paddingEnd="3dp"
+                android:text="Pe"
+                android:textAlignment="center"
+                android:textColor="@color/cyan500"
+                app:layout_constraintStart_toEndOf="@+id/textView4"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar_friday" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:padding="2dp"
+                android:paddingStart="4dp"
+                android:paddingEnd="3dp"
+                android:text="La"
+                android:textAlignment="center"
+                android:textColor="@color/cyan500"
+                app:layout_constraintStart_toEndOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar_saturday" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:padding="2dp"
+                android:paddingStart="4dp"
+                android:text="Su"
+                android:textAlignment="center"
+                android:textColor="@color/cyan500"
+                app:layout_constraintStart_toEndOf="@+id/textView6"
+                app:layout_constraintTop_toBottomOf="@+id/progressbar_sunday" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
