--- a/app/src/main/res/layout/routine_card_category.xml
+++ b/app/src/main/res/layout/routine_card_category.xml
@@ -10,34 +10,24 @@
     android:background="@color/colorIcons"
     android:elevation="3dp"
     android:padding="34dp"
-    card_view:cardCornerRadius="60dp">
+    app:cardBackgroundColor="@color/mango400"
+    card_view:cardCornerRadius="20dp"
+    android:id="@+id/thumbnail">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.team9.daymate.elements.CircularImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"
-            android:paddingTop="5dp"
-            android:src="@drawable/tab_settings_32dp"
-            app:circle_backgroundColor="@color/design_default_color_secondary"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
-
         <TextView
             android:id="@+id/title"
             android:layout_width="268dp"
-            android:layout_height="50dp"
+            android:layout_height="70dp"
             android:gravity="center_vertical"
-            android:padding="@dimen/_8dp"
+            android:padding="@dimen/_16dp"
             android:text="@string/title_placeholder"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="@dimen/_16sp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_18sp"
+            android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="0.536"
@@ -45,12 +35,6 @@
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:layout_constraintVertical_bias="0.0" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            card_view:srcCompat="@drawable/ic_arrow_right_32dp" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
