--- a/app/src/main/res/layout/routine_category_fragment.xml
+++ b/app/src/main/res/layout/routine_category_fragment.xml
@@ -9,7 +9,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="170dp"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center|top"
         android:layout_centerHorizontal="true"
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Rutiinit"
+            android:text="Valitse kategoria"
             android:textAlignment="gravity"
             android:textSize="24sp" />
     </androidx.cardview.widget.CardView>
