--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,6 +62,17 @@
     <color name="yellow800">#677200</color>
     <color name="yellow900">#3c4300</color>
 
+    <color name="sunglow50">#FAF8EC</color>
+    <color name="sunglow100">#F9F5C8</color>
+    <color name="sunglow200">#F4ED84</color>
+    <color name="sunglow300">#FFF700</color>
+    <color name="sunglow400">#DDC212</color>
+    <color name="sunglow500">#CCA306</color>
+    <color name="sunglow600">#AF8004</color>
+    <color name="sunglow700">#8B6107</color>
+    <color name="sunglow800">#6D4A0C</color>
+    <color name="sunglow900">#563B0D</color>
+
     <color name="red50">#fef8f8</color>
     <color name="red100">#fbeae8</color>
     <color name="red200">#f8dad7</color>
@@ -171,6 +182,14 @@
     <color name="blush700">#6F3B59</color>
     <color name="blush800">#4D2D43</color>
     <color name="blush900">#392535</color>
+
+
+
+
+
+
+
+
 
 
 
