--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,9 @@
     <dimen name="_8dp">8dp</dimen>
     <dimen name="_4dp">4dp</dimen>
     <dimen name="_16dp">16dp</dimen>
+    <dimen name="_16sp">16sp</dimen>
+    <dimen name="_64dp">64dp</dimen>
+    <dimen name="_32dp">32dp</dimen>
+    <dimen name="_32sp">32sp</dimen>
+    <dimen name="_18sp">18sp</dimen>
 </resources>
