--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!-- @author Alexander L -->
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".routines.RoutineActivity">
+
+    <RelativeLayout
+        android:id="@+id/toast_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -15,12 +24,13 @@
         android:src="@drawable/tab_settings_32dp"
         android:contentDescription="Setting"/>
 
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="615dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="70dp"
         android:layout_marginTop="50dp"
-        android:layout_marginHorizontal="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         app:cardElevation="0dp"
         app:cardCornerRadius="40dp"
         app:cardPreventCornerOverlap="true" >
@@ -29,13 +39,11 @@
             android:id="@+id/fragment_container"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:background="@color/purple_500"/>
+            android:background="@color/purple_500" />
 
     </androidx.cardview.widget.CardView>
 
     <include layout="@layout/navigation" />
-
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
