--- a/app/src/main/res/layout/progress_fragment.xml
+++ b/app/src/main/res/layout/progress_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- @author Alexander L -->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -38,7 +38,6 @@
         android:layout_width="312dp"
         android:layout_height="184dp"
         android:layout_marginTop="40dp"
-
 
         android:padding="10dp"
         app:circle_backgroundColor="@color/cyan300"
@@ -99,7 +98,6 @@
             android:layout_height="match_parent">
 
 
-
             <com.team9.daymate.elements.ProgressPillar
                 android:id="@+id/progressbar_monday"
                 android:layout_width="wrap_content"
@@ -121,7 +119,6 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 app:backgroundColor="@color/cyan200"
                 app:color="@color/green400"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -136,7 +133,6 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 app:backgroundColor="@color/cyan200"
                 app:color="@color/green400"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -152,7 +148,6 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 app:backgroundColor="@color/cyan200"
                 app:color="@color/green400"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -167,7 +162,6 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 app:backgroundColor="@color/cyan200"
                 app:color="@color/green400"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -182,7 +176,6 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 app:backgroundColor="@color/cyan200"
                 app:color="@color/green400"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -197,7 +190,6 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
 
                 app:backgroundColor="@color/cyan200"
                 app:color="@color/green400"
@@ -206,6 +198,106 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:pillarWidth="100"
                 app:progress="20" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="Ma"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/progressbar_monday"
+                app:layout_constraintStart_toStartOf="@+id/progressbar_monday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.856" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="1dp"
+                android:layout_marginEnd="32dp"
+                android:padding="3dp"
+                android:text="Ti"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/progressbar_tuesday"
+                app:layout_constraintEnd_toStartOf="@+id/textView3"
+                app:layout_constraintStart_toStartOf="@+id/progressbar_tuesday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.862" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="28dp"
+                android:padding="3dp"
+                android:text="Ke"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/progressbar_wednesday"
+                app:layout_constraintEnd_toStartOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="@+id/progressbar_wednesday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.867" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:padding="3dp"
+                android:text="To"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/progressbar_thursday"
+                app:layout_constraintEnd_toStartOf="@+id/textView5"
+                app:layout_constraintStart_toStartOf="@+id/progressbar_thursday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.862" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="1dp"
+                android:padding="3dp"
+                android:text="Pe"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/progressbar_friday"
+                app:layout_constraintStart_toStartOf="@+id/progressbar_friday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.867" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="25dp"
+                android:layout_height="28dp"
+                android:padding="4dp"
+                android:text="La"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/progressbar_saturday"
+                app:layout_constraintStart_toStartOf="@+id/progressbar_saturday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.867" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="Su"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/progressbar_sunday"
+                app:layout_constraintStart_toStartOf="@+id/progressbar_sunday"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.862" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="left"
+                tools:layout_editor_absoluteX="16dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -226,6 +318,19 @@
         app:layout_constraintStart_toStartOf="@+id/circularImageView"
         app:layout_constraintTop_toTopOf="@+id/circularImageView"
         app:layout_constraintVertical_bias="0.516" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="left" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="364dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
