--- a/app/src/main/res/layout/routine_category_fragment.xml
+++ b/app/src/main/res/layout/routine_category_fragment.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- @author Alexander L -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,6 +7,18 @@
     android:background="@color/carrot100"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageButton
+        android:id="@+id/tab_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_margin="10dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/tab_close_32dp"
+        android:contentDescription="Close"
+        android:layout_alignParentEnd="true"
+        />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
