--- a/app/src/main/res/layout/shop_catalogue_fragment.xml
+++ b/app/src/main/res/layout/shop_catalogue_fragment.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- @author Alexander L -->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,6 +14,7 @@
 
         android:layout_marginTop="296dp"
         android:text="Kaupan etusivu"
+        android:textSize="@dimen/_64sp"
         android:textColor="@color/design_default_color_error"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
