--- a/app/src/main/res/values/CircularImageView.xml
+++ b/app/src/main/res/values/CircularImageView.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- @author Alexander L -->
 <resources>
     <declare-styleable name="CircularImageView">
         <attr name="circle_width" format="dimension" />
