--- a/app/src/main/res/values/ProgressPillar.xml
+++ b/app/src/main/res/values/ProgressPillar.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- @author Alexander L -->
 <resources>
     <declare-styleable name="ProgressPillar">
         <attr name="color" format="color" />
