--- a/app/src/main/res/values/RoundedOverlay.xml
+++ b/app/src/main/res/values/RoundedOverlay.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- @author Alexander L -->
 <resources>
     <style name="FABOverlay" parent="">
         <item name="cornerFamily">rounded</item>
