--- a/app/src/main/res/layout/routine_edit_fragment.xml
+++ b/app/src/main/res/layout/routine_edit_fragment.xml
@@ -75,7 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="69dp"
-        app:cardBackgroundColor="@color/lime100"
+        app:cardBackgroundColor="#5BDCF8EC"
+        app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView">
@@ -112,7 +113,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="36dp"
-        android:background="@color/lime100"
+        android:background="#5BDCF8EC"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -309,7 +310,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
-        android:background="@color/lime100"
+        android:background="#CEF5F0"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
