--- a/app/src/main/res/values/CircularImageView.xml
+++ b/app/src/main/res/values/CircularImageView.xml
@@ -3,6 +3,7 @@
 <resources>
     <declare-styleable name="CircularImageView">
         <attr name="circle_width" format="dimension" />
+        <attr name="circle_iconScale" format="integer" />
         <attr name="circle_color" format="color" />
         <attr name="circle_backgroundTint" format="color" />
         <attr name="circle_overlay" format="boolean" />
